Use @enablePreview in MOAT